# aegis-gui-tauri

./: PKGBUILD  README.md  aegis-gui-tauri-debug-128.42c95c8-1-x86_64.pkg.tar.zst  aegis-gui-tauri-debug-129.b8c6e05-1-x86_64.pkg.tar.zst  default.nix  flake.nix  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1709308786112-5ef42fd2999a7.mjs  vite.config.ts.timestamp-1738260050842-4baf825f8332e.mjs
aegis-gui-tauri/: FETCH_HEAD  config  packed-refs
aegis-gui-tauri/objects/pack/: pack-8d90d15a0dffbceebb1d948d6641e8e5f6b81db0.idx  pack-8d90d15a0dffbceebb1d948d6641e8e5f6b81db0.rev
aegis-gui-tauri/refs/heads/: main
docs/: development-setup.md  first-time-contributor.md
nix/: aegis-gui-tauri.nix  treedome.nix
src/: App.svelte  index.css  main.ts  stepsConfig.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  config.rs  global_app.rs  install.rs  keymaps  locale  logger.rs  logging.rs  mod.rs
src-tauri/src/fs/: fs.rs
src-tauri/src/partition/: actions.rs  automount.rs  device.rs  fileinfo.rs  gs.rs  mod.rs  mount.rs  probebcache.rs  probedasd.rs  probeos.rs  unmount.rs  utils.rs
src/lib/: Desktop.svelte  InfoDialog.svelte  InputBox.svelte  InstallingOne.svelte  Keyboard.svelte  ListBox.svelte  PackageButton.svelte  ProgressStepper.svelte  Welcome.svelte  stepsConfig.ts  stepsStore.ts  types.ts
src/lib/components/: Button.svelte  CardGroup.svelte  CheckButton.svelte  ComboBox.svelte  Context.svelte  Dialog.svelte  Dropdown.svelte  Dropdown2.svelte  InfoBar.svelte  InfoDialog.svelte  InputBox.svelte  ListBox.svelte  Navigation.svelte  PackageButton.svelte  ProgressStepper.svelte  SegementedBar.svelte  SegementedBar2.svelte  Slider.svelte  StepWrapper.svelte  Switch.svelte
src/lib/components/CreatePartition/: CreatePartitionDialog.svelte  CreatePartitionTableDialog.svelte  Method.svelte  (+1 more)
src/lib/steps/: Accounts.svelte  Desktop.svelte  Extras.svelte  Keyboard.svelte  ManualPartition.svelte  Packages.svelte  Partition.svelte  Summary.svelte  Welcome.svelte
src/lib/stores/: accountsStore.ts  currentUserStore.ts  desktopStore.ts  environmentStore.ts  extrasStore.ts  globalStore.ts  keyboardStore.ts  logStore.ts  packagesStore.ts  partitionStore.ts  userStore.ts
src/lib/utils/: functions.ts  types.ts  uuid.ts
src/pages/: AccountsPage.svelte  BaseDitroPage.svelte  DesktopPage.svelte  DonePage.svelte  ExtrasPage.svelte  InstallPage.svelte  KeyboardPage.svelte  PackagesPage.svelte  SummaryPage.svelte  WelcomePage.svelte
src/pages/PartitionPages/: 1.svelte  2.svelte  3.svelte  4.svelte  5.svelte
src/scss/: _colors.scss  _common.scss  _material.scss  _material_dark.scss  _material_light.scss  main.scss
(+5 files in other folders)
