[package]
name = "aegis-gui-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "aegis-gui-tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }
#tauri-build = "=2.0.0-beta.6"
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "api-all"] }
regex = "1.10.3"
tauri-plugin-system-info = "0.2.0"

# udev = "0.8.0"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
chrono = "0.4.34"
once_cell = "1.19.0"
log = "0.4.21"
athena-aegis = "0.1.2"
async-std = "1.12.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
