[package]
name = "aegis-gui-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "aegis-gui-tauri"
edition = "2021"
rust-version = "1.78"

[lib]
name = "aegis_gui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-alpha.2"
regex = "1.10.3"
lazy_static = "1.4.0"
once_cell = "1.19.0"
async-std = "1.12.0"
tokio = { version = "1.29.1", features = ["full"] }
tauri-plugin-dialog = "2.0.0-alpha.2"
tauri-plugin-fs = "2.0.0-beta.7"

